[metadata]
name = nervecount-napari
version = 0.0.1

author = Valeriia Ustymenko
author_email = valeriia.ustymenko@gmail.com
license = MIT
description = napari plugin for segmentation of immunofluorescent images of nerve transections for evaluation of morphometric parameters of axons
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Documentation = https://github.com/valusty/nervecount-napari
    Source Code = https://github.com/valusty/nervecount-napari
    Bug Tracker = https://github.com/valusty/nervecount-napari/issues
    User Support = https://github.com/valusty/nervecount-napari/issues

classifiers =
    Framework :: napari

    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

    Operating System :: OS Independent

    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
include_package_data = True
python_requires = >=3.12
package_dir =
    =src
install_requires =
    matplotlib
    napari
    numpy
    os
    pandas
    pathlib
    scikit-image
    scipy


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    nervecount-napari = nervecount_napari:napari.yaml